<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/weather"
        android:contentDescription="@string/action_weather"
        android:icon="@drawable/ic_nav_weather_24dp"
        android:title="@string/action_weather" />
    <item
        android:id="@+id/search"
        android:contentDescription="@string/action_search"
        android:icon="@drawable/ic_nav_search_24dp"
        android:title="@string/action_search" />
    <item
        android:id="@+id/favorites"
        android:contentDescription="@string/action_favorites"
        android:icon="@drawable/ic_nav_favorite_24dp"
        android:title="@string/action_favorites" />
    <item
        android:id="@+id/settings"
        android:contentDescription="@string/action_settings"
        android:icon="@drawable/ic_nav_settings_24dp"
        android:title="@string/action_settings" />

</menu>