<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/weather">

    <fragment
        android:id="@+id/weather"
        android:name="com.qw73.weatherapptask.ui.weather.WeatherFragment"
        android:label="@string/action_weather"
        tools:layout="@layout/fragment_weather" />

    <fragment
        android:id="@+id/settings"
        android:name="com.qw73.weatherapptask.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/search"
        android:name="com.qw73.weatherapptask.ui.search.SearchFragment"
        android:label="@string/action_search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_to_details"
            app:destination="@id/details"
            app:popUpTo="@id/search"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/favorites"
        android:name="com.qw73.weatherapptask.ui.favorites.FavoritesFragment"
        android:label="@string/action_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_favorites_to_details"
            app:destination="@id/details"
            app:popUpTo="@id/favorites"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/details"
        android:name="com.qw73.weatherapptask.ui.details.DetailsFragment"
        android:label="@string/action_details"
        tools:layout="@layout/fragment_details">
        <argument
            android:name="latitude"
            app:argType="float" />
        <argument
            android:name="longitude"
            app:argType="float" />
    </fragment>

</navigation>