<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="?attr/colorSecondary"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="6dp"
        android:text="@string/temperature"
        android:textSize="20sp"
        android:theme="@style/SettingsTextStyle" />

    <RadioGroup
        android:id="@+id/temperature_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="2dp"
        android:background="@drawable/setting_buttons_rounded_corner_and_fill"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/SettingsButtonStyle"
            android:text="@string/degree_c"
            android:textSize="20sp"
             />


        <RadioButton
            android:id="@+id/button_fahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/SettingsButtonStyle"
            android:text="@string/degree_f"
             />
    </RadioGroup>

</androidx.appcompat.widget.LinearLayoutCompat>