<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/ivFavorites"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="19dp"
                android:contentDescription="@string/action_favorites"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3"
                tools:src="@drawable/ic_heart_27dp" />

            <TextView
                android:id="@+id/tCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="35sp"
                android:theme="@style/WeatherForecastStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivFavorites"
                tools:text="Moscow" />

            <TextView
                android:id="@+id/tDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.currentDay.weekDay}"
                android:textSize="20sp"
                android:theme="@style/WeatherForecastStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tCity"
                tools:text="Today" />

            <TextView
                android:id="@+id/tDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:theme="@style/WeatherForecastStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tDay"
                tools:text="October 24" />

            <ImageView
                android:id="@+id/ivWeather"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tDate"
                app:layout_constraintWidth_percent="0.25"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="52sp"
                android:theme="@style/WeatherForecastStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivWeather"
                tools:text="37" />

            <TextView
                android:id="@+id/ivDegree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="-7dp"
                android:text="@string/degree_"
                android:textSize="52sp"
                android:theme="@style/WeatherForecastStyle"
                app:layout_constraintStart_toEndOf="@id/tDegree"
                app:layout_constraintTop_toBottomOf="@id/ivWeather"
                app:layout_constraintWidth_percent="0.25" />

            <TextView
                android:id="@+id/tDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-4dp"
                android:maxWidth="372dp"
                android:textSize="32sp"
                android:theme="@style/WeatherForecastStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tDegree"
                tools:text="rain" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_words"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/rv_weather_rounded_corner_and_fill"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_weight="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:itemCount="10"
            tools:listitem="@layout/item_day" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>